# pyremoteplay

./: README.md  pyproject.toml
.github/workflows/: build.yml
pyremoteplay/: __version__.py  device.py
tests/: test_receiver.py
