[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyremoteplay"
version = "0.7.7"
description = "Python PlayStation Remote Play API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "ktnrg45", email = "ktnrg45dev@gmail.com" },
]
maintainers = [
    { name = "elioseverojunior" },
]
keywords = [
    "playstation",
    "sony",
    "ps4",
    "ps5",
    "remote play",
    "remoteplay",
    "rp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.11"
dependencies = [
    # Cryptography for the Remote Play protocol handshake
    "cryptography>=42.0",
    # Protocol buffers used in stream packet framing
    "protobuf>=4.21.1",
    # HTTP client for OAuth/PSN authentication flows
    "requests>=2.31.0",
    # Event emitter used by Session lifecycle
    "pyee>=12.0.0",
    # YAML config parsing (controller mappings, etc.)
    "pyyaml>=6.0",
    # Network interface discovery (LAN device tracker)
    "netifaces>=0.11.0",
    # PS Store metadata lookup (game art, titles). Old library but only public dep
    # that brings PSN-store integration. Considered for replacement in a future
    # release.
    "pyps4-2ndscreen>=1.3.1",
    # WORKAROUND: pyps4-2ndscreen unconditionally imports `async_timeout` even
    # on Python 3.11+ where `asyncio.timeout` is built in. Including here until
    # we either upstream a fix or drop pyps4-2ndscreen entirely.
    "async_timeout>=4.0",
]

[project.optional-dependencies]
# Video/audio frame decoding for `QueueReceiver` and the GUI live view.
av = [
    "av>=12.0.0",
]
# Forward Error Correction for stream recovery. Requires libJerasure system lib.
# Pure-runtime dependency, ships as a wheel on Linux/Windows; macOS needs:
#     brew install jerasure gf-complete
fec = [
    "pyjerasure>=1.0.0",
]
# GUI dependencies for the bundled PySide6 live-stream viewer.
gui = [
    "pyremoteplay[av]",
    "pyside6>=6.6.0",
    "PyOpenGL>=3.1.5",
    "sounddevice>=0.4.6",
    "pygame>=2.5.0",
]
# Test & dev tools
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # numpy is used for synthetic frame generation in tests/test_receiver.py
    "numpy>=2.0",
]
dev = [
    "pyremoteplay[av,fec,gui,test]",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.scripts]
pyremoteplay = "pyremoteplay.__main__:main"

[project.gui-scripts]
pyremoteplay-gui = "pyremoteplay.gui.__main__:main"

[project.urls]
Homepage = "https://github.com/elioseverojunior/pyremoteplay"
Documentation = "https://pyremoteplay.readthedocs.io/"
Repository = "https://github.com/elioseverojunior/pyremoteplay"
Upstream = "https://github.com/ktnrg45/pyremoteplay"
Issues = "https://github.com/elioseverojunior/pyremoteplay/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyremoteplay"]
# Ship PEP 561 `py.typed` marker so consumers' type checkers pick up our hints.
include = ["pyremoteplay/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyremoteplay",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
]

# ---------- Tooling configuration ----------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that require a live PS4/PS5 on the LAN",
    "fec: tests requiring pyjerasure (libJerasure system lib)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
# Incremental adoption strategy: ship py.typed so downstream consumers see
# our existing hints, but don't gate CI on strict checks yet — the codebase
# was written without `disallow_untyped_defs`, so enabling that today produces
# ~1k "missing annotation" errors that would block CI without adding signal.
# Future work: incrementally add hints module-by-module, with each module
# graduating to strict via [[tool.mypy.overrides]].
strict = false
ignore_missing_imports = true  # for av, pyps4_2ndscreen, sounddevice, ...
exclude = [
    # Auto-generated protobuf stubs — re-generated, not hand-maintained
    "pyremoteplay/takion_pb2\\.py$",
    # GUI is optional and not on our supported surface
    "pyremoteplay/gui/.*",
]

# Modules verified clean under strict mode. New code should land here so we
# catch regressions in the API surface PS5 Coach (and other consumers) use.
[[tool.mypy.overrides]]
module = ["pyremoteplay.__version__"]
strict = true
